@@ -2,6 +2,7 @@ Unreleased
 	* Removed Python 2.7 support
 	* Fix output encoding for Python 3.8
 	* Fix bug mixing mapreduce() & status --cache
+	* Make block_access (used in mapreduce()) much faster (20x)
 
 Version 2.0.2 Thu Jun 11 2020 by luispedro
 	* Fix jug argument parsing
